fixed footer letter-spacing measure

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -65,7 +65,7 @@
 .footer-text {
   opacity: 0.6;
   line-height: 14px;
-  letter-spacing: 1.188px;
+  letter-spacing: 0.099em;
   font-size: 12px;
   text-align: center;
 }
@@ -112,7 +112,7 @@
     margin-top: 98px;
     font-size: 19px;
     line-height: normal;
-    letter-spacing: 0.19px;
+    letter-spacing: 0.01em;
   }
   .footer-list-address {
     margin-bottom: 64px;
@@ -136,11 +136,7 @@
     display: block;
   }
   .footer-list-item {
-    font-family: "Roboto", sans-serif;
     font-size: 18px;
-    line-height: 27px;
-    font-style: normal;
-    font-weight: 400;
   }
   .footer-consent {
     display: flex;
@@ -179,10 +175,6 @@
     padding: 8px;
   }
   .footer-nav {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 27px;
-    font-style: normal;
     gap: 30px;
     flex-direction: row;
   }
@@ -191,7 +183,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    letter-spacing: 0.19px;
+    letter-spacing: 0.012em;
   }
   .footer-address {
     display: flex;
